2010-12-26  Moritz Bunkus  <moritz@bunkus.org>

	* all: new feature: Added online update checks. The command line
	tools know a new parameter "--check-for-updates". mmg has a new
	menu entry ("Help" -> "Check for updates") and checks
	automatically when it starts, but at most once in 24 hours. Can be
	turned off in the preferences. This function requires libcurl and
	is not built if libcurl is not available.

2010-12-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: buf fix: Avoid a crash due to invalid memory access if
	a source file name contains numbers (happens only if mkvtoolnix is
	built with MS Visual Studio). Fix for bug 585.

2010-12-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Added support for reading VP8 video from
	Ogg files. Implements bug 584.

	* mkvextract: enhancement: mkvextract will exit with an error if
	the user specifies track IDs that do not exist in the source
	file. This works in the "tracks" and "timecodes_v2" extraction
	modes. Fix for bug 583.

	* docs: mkvextract's man page has been updated to match the
	program's expected command line syntax for the "timecodes_v2"
	mode. Fix for bug 583.

2010-12-20  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed building the Qt version of mkvinfo's
	GUI. Fix for bug 576.

	* mkvmerge, mmg: bug fix: Option files could not contain options
	that started with '#' as they were interpreted as comment lines.

2010-11-15  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: The "default duration" header field is
	set for DTS audio tracks.

2010-11-09  Moritz Bunkus  <moritz@bunkus.org>

	* build system: mmg's guide and its images are installed into the
	location given by configure's "docdir" variable. Patch by Cristian
	Morales Vega (see AUTHORS).

2010-11-07  Moritz Bunkus  <moritz@bunkus.org>

	* all: Made the French translation selectable in all programs.

2010-11-01  Moritz Bunkus  <moritz@bunkus.org>
